--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@ui-kitten/components": "^5.3.1",
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.11.0",
-    "react-redux": "^8.1.2"
+    "react-native-svg": "9.13.6",
+    "react-redux": "^8.1.2",
+    "twrnc": "^3.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
