--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ui-kitten/components": "^5.3.1",
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.1.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.45.4",
