--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-native": "0.72.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "9.13.6",
+    "react-native-svg": "^13.11.0",
     "react-redux": "^8.1.2",
     "twrnc": "^3.6.4"
   },
