--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.1.0",
+    "moment": "^2.29.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.45.4",
